--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,10 @@
 body {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  color: blue;
+  background-color: azure;
+}
+body {
   color: #333;
   text-align: center;
   font-family: "Arial";
@@ -6,6 +12,22 @@ body {
   margin: 0;
   padding: 0;
 }
+
+#cabecera {
+  background: #33a;
+  box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+  color: white;
+  font-weight: bold;
+  margin: 0;
+  padding: 0.5em;
+}
+
+#cabecera #tagline {
+  padding: 0 0 0 1em;
+  font-weight: normal;
+  font-size: 0.8em;
+}
+
 #container {
   width: 70%;
   padding: 1em;
