--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@ body {
   background-color: azure;
 }
 body {
-  color: #333;
+  color: blue;
   text-align: center;
   font-family: "Arial";
   font-size: 16px;
